--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -1,7 +1,6 @@
-// Utilities
 @import "../utilities/named_variables.scss";
 
-header {
+.header {
   width: 100%;
   height: 2rem;
   background: $black;
