--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -2,8 +2,23 @@
 
 .header {
   width: 100%;
-  height: 2rem;
+  height: 3rem;
   background: $black;
   color: $white;
   border-bottom: 4px solid $orange;
+  display: flex;
+  h1 {
+    font-weight: bold;
+    font-size: 1.5rem;
+    margin: auto 1rem;
+  }
+}
+
+.footer {
+  width: 100%;
+  height: 3rem;
+  background: $black;
+  color: $white;
+  border-top: 4px solid $orange;
+  margin-top: 2rem;
 }
