--- a/src/components/Experience/Experience.module.scss
+++ b/src/components/Experience/Experience.module.scss
@@ -14,13 +14,11 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    align-items: center;
 
     .item {
       margin-bottom: 2rem;
       padding-left: 1rem;
       position: relative;
-      width: 75%;
       display: flex;
       align-items: center;
 
@@ -37,7 +35,7 @@
         content: "";
         position: absolute;
         width: 0.125rem;
-        height: calc(100% + 2.1rem);
+        height: calc(100% + 2rem + 0.375rem);
         background-color: $orange;
         top: 50%;
         left: 1.3125rem;
@@ -47,7 +45,7 @@
         content: "";
         position: absolute;
         width: 0.125rem;
-        height: calc(100% + 2rem);
+        height: calc(100% + 2rem - 0.375rem);
         background-color: $orange;
         bottom: 50%;
         left: 1.3125rem;
