--- a/src/components/Projects/Projects.module.scss
+++ b/src/components/Projects/Projects.module.scss
@@ -11,7 +11,8 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      margin: 0 2rem;
+      // margin: 0 2rem;
+      padding: 0 2rem;
 
       img {
         max-width: 50%;
@@ -22,8 +23,30 @@
         font-size: 1.5rem;
         margin-bottom: 0.5rem;
       }
+    }
+  }
 
-      .description {
+  @media (max-width: 900px) {
+    .list {
+      flex-wrap: wrap;
+      justify-content: flex-start;
+
+      .project {
+        width: 50%;
+        .description {
+          margin-bottom: 2rem;
+        }
+      }
+    }
+  }
+
+  @media (max-width: 700px) {
+    .list {
+      flex-direction: column;
+      justify-content: center;
+
+      .project {
+        width: auto;
       }
     }
   }
