--- a/src/components/Projects/Projects.module.scss
+++ b/src/components/Projects/Projects.module.scss
@@ -1,3 +1,5 @@
+@import "../../utilities/named_variables.scss";
+
 .component {
   h2 {
     text-align: center;
@@ -11,12 +13,27 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      // margin: 0 2rem;
       padding: 0 2rem;
+      width: 33%;
 
-      img {
+      .image {
         max-width: 50%;
-        margin-bottom: 0.5rem;
+        text-align: center;
+        img {
+          border-radius: 50%;
+          width: 100%;
+          margin-bottom: 0.5rem;
+        }
+      }
+
+      a {
+        text-decoration: none;
+        color: $black;
+      }
+
+      a:hover {
+        color: orangered;
+        text-decoration: underline;
       }
 
       .title {
