--- a/src/components/Projects/Projects.module.scss
+++ b/src/components/Projects/Projects.module.scss
@@ -17,11 +17,12 @@
       width: 33%;
 
       .image {
-        max-width: 50%;
+        width: 100%;
         text-align: center;
+
         img {
           border-radius: 50%;
-          width: 100%;
+          max-width: 50%;
           margin-bottom: 0.5rem;
         }
       }
@@ -40,6 +41,10 @@
         font-size: 1.5rem;
         margin-bottom: 0.5rem;
       }
+
+      .description {
+        text-align: center;
+      }
     }
   }
 
@@ -50,6 +55,7 @@
 
       .project {
         width: 50%;
+
         .description {
           margin-bottom: 2rem;
         }
@@ -64,6 +70,7 @@
 
       .project {
         width: auto;
+        padding: 0;
       }
     }
   }
